cmake_minimum_required(VERSION 3.7)
project(vis)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        vis/glm/glm/detail/_features.hpp
        vis/glm/glm/detail/_fixes.hpp
        vis/glm/glm/detail/_noise.hpp
        vis/glm/glm/detail/_swizzle.hpp
        vis/glm/glm/detail/_swizzle_func.hpp
        vis/glm/glm/detail/_vectorize.hpp
        vis/glm/glm/detail/dummy.cpp
        vis/glm/glm/detail/func_common.hpp
        vis/glm/glm/detail/func_exponential.hpp
        vis/glm/glm/detail/func_geometric.hpp
        vis/glm/glm/detail/func_integer.hpp
        vis/glm/glm/detail/func_matrix.hpp
        vis/glm/glm/detail/func_packing.hpp
        vis/glm/glm/detail/func_trigonometric.hpp
        vis/glm/glm/detail/func_vector_relational.hpp
        vis/glm/glm/detail/glm.cpp
        vis/glm/glm/detail/precision.hpp
        vis/glm/glm/detail/setup.hpp
        vis/glm/glm/detail/type_float.hpp
        vis/glm/glm/detail/type_gentype.hpp
        vis/glm/glm/detail/type_half.hpp
        vis/glm/glm/detail/type_int.hpp
        vis/glm/glm/detail/type_mat.hpp
        vis/glm/glm/detail/type_mat2x2.hpp
        vis/glm/glm/detail/type_mat2x3.hpp
        vis/glm/glm/detail/type_mat2x4.hpp
        vis/glm/glm/detail/type_mat3x2.hpp
        vis/glm/glm/detail/type_mat3x3.hpp
        vis/glm/glm/detail/type_mat3x4.hpp
        vis/glm/glm/detail/type_mat4x2.hpp
        vis/glm/glm/detail/type_mat4x3.hpp
        vis/glm/glm/detail/type_mat4x4.hpp
        vis/glm/glm/detail/type_vec.hpp
        vis/glm/glm/detail/type_vec1.hpp
        vis/glm/glm/detail/type_vec2.hpp
        vis/glm/glm/detail/type_vec3.hpp
        vis/glm/glm/detail/type_vec4.hpp
        vis/glm/glm/gtc/bitfield.hpp
        vis/glm/glm/gtc/color_space.hpp
        vis/glm/glm/gtc/constants.hpp
        vis/glm/glm/gtc/epsilon.hpp
        vis/glm/glm/gtc/functions.hpp
        vis/glm/glm/gtc/integer.hpp
        vis/glm/glm/gtc/matrix_access.hpp
        vis/glm/glm/gtc/matrix_integer.hpp
        vis/glm/glm/gtc/matrix_inverse.hpp
        vis/glm/glm/gtc/matrix_transform.hpp
        vis/glm/glm/gtc/noise.hpp
        vis/glm/glm/gtc/packing.hpp
        vis/glm/glm/gtc/quaternion.hpp
        vis/glm/glm/gtc/random.hpp
        vis/glm/glm/gtc/reciprocal.hpp
        vis/glm/glm/gtc/round.hpp
        vis/glm/glm/gtc/type_aligned.hpp
        vis/glm/glm/gtc/type_precision.hpp
        vis/glm/glm/gtc/type_ptr.hpp
        vis/glm/glm/gtc/ulp.hpp
        vis/glm/glm/gtc/vec1.hpp
        vis/glm/glm/gtx/associated_min_max.hpp
        vis/glm/glm/gtx/bit.hpp
        vis/glm/glm/gtx/closest_point.hpp
        vis/glm/glm/gtx/color_space.hpp
        vis/glm/glm/gtx/color_space_YCoCg.hpp
        vis/glm/glm/gtx/common.hpp
        vis/glm/glm/gtx/compatibility.hpp
        vis/glm/glm/gtx/component_wise.hpp
        vis/glm/glm/gtx/dual_quaternion.hpp
        vis/glm/glm/gtx/euler_angles.hpp
        vis/glm/glm/gtx/extend.hpp
        vis/glm/glm/gtx/extended_min_max.hpp
        vis/glm/glm/gtx/fast_exponential.hpp
        vis/glm/glm/gtx/fast_square_root.hpp
        vis/glm/glm/gtx/fast_trigonometry.hpp
        vis/glm/glm/gtx/gradient_paint.hpp
        vis/glm/glm/gtx/handed_coordinate_space.hpp
        vis/glm/glm/gtx/hash.hpp
        vis/glm/glm/gtx/integer.hpp
        vis/glm/glm/gtx/intersect.hpp
        vis/glm/glm/gtx/io.hpp
        vis/glm/glm/gtx/log_base.hpp
        vis/glm/glm/gtx/matrix_cross_product.hpp
        vis/glm/glm/gtx/matrix_decompose.hpp
        vis/glm/glm/gtx/matrix_interpolation.hpp
        vis/glm/glm/gtx/matrix_major_storage.hpp
        vis/glm/glm/gtx/matrix_operation.hpp
        vis/glm/glm/gtx/matrix_query.hpp
        vis/glm/glm/gtx/matrix_transform_2d.hpp
        vis/glm/glm/gtx/mixed_product.hpp
        vis/glm/glm/gtx/norm.hpp
        vis/glm/glm/gtx/normal.hpp
        vis/glm/glm/gtx/normalize_dot.hpp
        vis/glm/glm/gtx/number_precision.hpp
        vis/glm/glm/gtx/optimum_pow.hpp
        vis/glm/glm/gtx/orthonormalize.hpp
        vis/glm/glm/gtx/perpendicular.hpp
        vis/glm/glm/gtx/polar_coordinates.hpp
        vis/glm/glm/gtx/projection.hpp
        vis/glm/glm/gtx/quaternion.hpp
        vis/glm/glm/gtx/range.hpp
        vis/glm/glm/gtx/raw_data.hpp
        vis/glm/glm/gtx/rotate_normalized_axis.hpp
        vis/glm/glm/gtx/rotate_vector.hpp
        vis/glm/glm/gtx/scalar_multiplication.hpp
        vis/glm/glm/gtx/scalar_relational.hpp
        vis/glm/glm/gtx/simd_mat4.hpp
        vis/glm/glm/gtx/simd_quat.hpp
        vis/glm/glm/gtx/simd_vec4.hpp
        vis/glm/glm/gtx/spline.hpp
        vis/glm/glm/gtx/std_based_type.hpp
        vis/glm/glm/gtx/string_cast.hpp
        vis/glm/glm/gtx/transform.hpp
        vis/glm/glm/gtx/transform2.hpp
        vis/glm/glm/gtx/type_aligned.hpp
        vis/glm/glm/gtx/type_trait.hpp
        vis/glm/glm/gtx/vector_angle.hpp
        vis/glm/glm/gtx/vector_query.hpp
        vis/glm/glm/gtx/wrap.hpp
        vis/glm/glm/simd/common.h
        vis/glm/glm/simd/exponential.h
        vis/glm/glm/simd/geometric.h
        vis/glm/glm/simd/integer.h
        vis/glm/glm/simd/matrix.h
        vis/glm/glm/simd/packing.h
        vis/glm/glm/simd/platform.h
        vis/glm/glm/simd/trigonometric.h
        vis/glm/glm/simd/vector_relational.h
        vis/glm/glm/common.hpp
        vis/glm/glm/exponential.hpp
        vis/glm/glm/ext.hpp
        vis/glm/glm/fwd.hpp
        vis/glm/glm/geometric.hpp
        vis/glm/glm/glm.hpp
        vis/glm/glm/integer.hpp
        vis/glm/glm/mat2x2.hpp
        vis/glm/glm/mat2x3.hpp
        vis/glm/glm/mat2x4.hpp
        vis/glm/glm/mat3x2.hpp
        vis/glm/glm/mat3x3.hpp
        vis/glm/glm/mat3x4.hpp
        vis/glm/glm/mat4x2.hpp
        vis/glm/glm/mat4x3.hpp
        vis/glm/glm/mat4x4.hpp
        vis/glm/glm/matrix.hpp
        vis/glm/glm/packing.hpp
        vis/glm/glm/trigonometric.hpp
        vis/glm/glm/vec2.hpp
        vis/glm/glm/vec3.hpp
        vis/glm/glm/vec4.hpp
        vis/glm/glm/vector_relational.hpp
        vis/glm/test/bug/bug_ms_vec_static.cpp
        vis/glm/test/core/core_force_pure.cpp
        vis/glm/test/core/core_force_unrestricted_gentype.cpp
        vis/glm/test/core/core_func_common.cpp
        vis/glm/test/core/core_func_exponential.cpp
        vis/glm/test/core/core_func_geometric.cpp
        vis/glm/test/core/core_func_integer.cpp
        vis/glm/test/core/core_func_integer_bit_count.cpp
        vis/glm/test/core/core_func_integer_find_lsb.cpp
        vis/glm/test/core/core_func_integer_find_msb.cpp
        vis/glm/test/core/core_func_matrix.cpp
        vis/glm/test/core/core_func_noise.cpp
        vis/glm/test/core/core_func_packing.cpp
        vis/glm/test/core/core_func_swizzle.cpp
        vis/glm/test/core/core_func_trigonometric.cpp
        vis/glm/test/core/core_func_vector_relational.cpp
        vis/glm/test/core/core_setup_force_cxx98.cpp
        vis/glm/test/core/core_setup_message.cpp
        vis/glm/test/core/core_setup_precision.cpp
        vis/glm/test/core/core_type_aligned.cpp
        vis/glm/test/core/core_type_cast.cpp
        vis/glm/test/core/core_type_ctor.cpp
        vis/glm/test/core/core_type_float.cpp
        vis/glm/test/core/core_type_int.cpp
        vis/glm/test/core/core_type_length.cpp
        vis/glm/test/core/core_type_mat2x2.cpp
        vis/glm/test/core/core_type_mat2x3.cpp
        vis/glm/test/core/core_type_mat2x4.cpp
        vis/glm/test/core/core_type_mat3x2.cpp
        vis/glm/test/core/core_type_mat3x3.cpp
        vis/glm/test/core/core_type_mat3x4.cpp
        vis/glm/test/core/core_type_mat4x2.cpp
        vis/glm/test/core/core_type_mat4x3.cpp
        vis/glm/test/core/core_type_mat4x4.cpp
        vis/glm/test/core/core_type_vec1.cpp
        vis/glm/test/core/core_type_vec2.cpp
        vis/glm/test/core/core_type_vec3.cpp
        vis/glm/test/core/core_type_vec4.cpp
        vis/glm/test/external/gli/core/dummy.cpp
        vis/glm/test/external/gli/core/generate_mipmaps.hpp
        vis/glm/test/external/gli/core/image2d.hpp
        vis/glm/test/external/gli/core/operation.hpp
        vis/glm/test/external/gli/core/operator.hpp
        vis/glm/test/external/gli/core/shared_array.hpp
        vis/glm/test/external/gli/core/shared_ptr.hpp
        vis/glm/test/external/gli/core/size.hpp
        vis/glm/test/external/gli/core/texture2d.hpp
        vis/glm/test/external/gli/core/texture2d_array.hpp
        vis/glm/test/external/gli/core/texture_cube.hpp
        vis/glm/test/external/gli/core/texture_cube_array.hpp
        vis/glm/test/external/gli/gtx/compression.hpp
        vis/glm/test/external/gli/gtx/fetch.hpp
        vis/glm/test/external/gli/gtx/gl_texture2d.hpp
        vis/glm/test/external/gli/gtx/gradient.hpp
        vis/glm/test/external/gli/gtx/loader.hpp
        vis/glm/test/external/gli/gtx/loader_dds10.hpp
        vis/glm/test/external/gli/gtx/loader_dds9.hpp
        vis/glm/test/external/gli/gtx/loader_tga.hpp
        vis/glm/test/external/gli/gtx/wavelet.hpp
        vis/glm/test/external/gli/gli.hpp
        vis/glm/test/gtc/gtc_bitfield.cpp
        vis/glm/test/gtc/gtc_color_space.cpp
        vis/glm/test/gtc/gtc_constants.cpp
        vis/glm/test/gtc/gtc_epsilon.cpp
        vis/glm/test/gtc/gtc_functions.cpp
        vis/glm/test/gtc/gtc_integer.cpp
        vis/glm/test/gtc/gtc_matrix_access.cpp
        vis/glm/test/gtc/gtc_matrix_integer.cpp
        vis/glm/test/gtc/gtc_matrix_inverse.cpp
        vis/glm/test/gtc/gtc_matrix_transform.cpp
        vis/glm/test/gtc/gtc_noise.cpp
        vis/glm/test/gtc/gtc_packing.cpp
        vis/glm/test/gtc/gtc_quaternion.cpp
        vis/glm/test/gtc/gtc_random.cpp
        vis/glm/test/gtc/gtc_reciprocal.cpp
        vis/glm/test/gtc/gtc_round.cpp
        vis/glm/test/gtc/gtc_type_aligned.cpp
        vis/glm/test/gtc/gtc_type_precision.cpp
        vis/glm/test/gtc/gtc_type_ptr.cpp
        vis/glm/test/gtc/gtc_ulp.cpp
        vis/glm/test/gtc/gtc_user_defined_types.cpp
        vis/glm/test/gtc/gtc_vec1.cpp
        vis/glm/test/gtx/gtx_associated_min_max.cpp
        vis/glm/test/gtx/gtx_closest_point.cpp
        vis/glm/test/gtx/gtx_color_space.cpp
        vis/glm/test/gtx/gtx_color_space_YCoCg.cpp
        vis/glm/test/gtx/gtx_common.cpp
        vis/glm/test/gtx/gtx_compatibility.cpp
        vis/glm/test/gtx/gtx_component_wise.cpp
        vis/glm/test/gtx/gtx_dual_quaternion.cpp
        vis/glm/test/gtx/gtx_euler_angle.cpp
        vis/glm/test/gtx/gtx_extend.cpp
        vis/glm/test/gtx/gtx_extended_min_max.cpp
        vis/glm/test/gtx/gtx_extented_min_max.cpp
        vis/glm/test/gtx/gtx_fast_exponential.cpp
        vis/glm/test/gtx/gtx_fast_square_root.cpp
        vis/glm/test/gtx/gtx_fast_trigonometry.cpp
        vis/glm/test/gtx/gtx_gradient_paint.cpp
        vis/glm/test/gtx/gtx_handed_coordinate_space.cpp
        vis/glm/test/gtx/gtx_int_10_10_10_2.cpp
        vis/glm/test/gtx/gtx_integer.cpp
        vis/glm/test/gtx/gtx_intersect.cpp
        vis/glm/test/gtx/gtx_io.cpp
        vis/glm/test/gtx/gtx_log_base.cpp
        vis/glm/test/gtx/gtx_matrix_cross_product.cpp
        vis/glm/test/gtx/gtx_matrix_decompose.cpp
        vis/glm/test/gtx/gtx_matrix_interpolation.cpp
        vis/glm/test/gtx/gtx_matrix_major_storage.cpp
        vis/glm/test/gtx/gtx_matrix_operation.cpp
        vis/glm/test/gtx/gtx_matrix_query.cpp
        vis/glm/test/gtx/gtx_matrix_transform_2d.cpp
        vis/glm/test/gtx/gtx_mixed_product.cpp
        vis/glm/test/gtx/gtx_norm.cpp
        vis/glm/test/gtx/gtx_normal.cpp
        vis/glm/test/gtx/gtx_normalize_dot.cpp
        vis/glm/test/gtx/gtx_number_precision.cpp
        vis/glm/test/gtx/gtx_optimum_pow.cpp
        vis/glm/test/gtx/gtx_orthonormalize.cpp
        vis/glm/test/gtx/gtx_perpendicular.cpp
        vis/glm/test/gtx/gtx_polar_coordinates.cpp
        vis/glm/test/gtx/gtx_projection.cpp
        vis/glm/test/gtx/gtx_quaternion.cpp
        vis/glm/test/gtx/gtx_random.cpp
        vis/glm/test/gtx/gtx_range.cpp
        vis/glm/test/gtx/gtx_rotate_normalized_axis.cpp
        vis/glm/test/gtx/gtx_rotate_vector.cpp
        vis/glm/test/gtx/gtx_scalar_multiplication.cpp
        vis/glm/test/gtx/gtx_scalar_relational.cpp
        vis/glm/test/gtx/gtx_simd_mat4.cpp
        vis/glm/test/gtx/gtx_simd_vec4.cpp
        vis/glm/test/gtx/gtx_spline.cpp
        vis/glm/test/gtx/gtx_string_cast.cpp
        vis/glm/test/gtx/gtx_type_aligned.cpp
        vis/glm/test/gtx/gtx_type_trait.cpp
        vis/glm/test/gtx/gtx_vector_angle.cpp
        vis/glm/test/gtx/gtx_vector_query.cpp
        vis/glm/test/gtx/gtx_wrap.cpp
        vis/main.cpp
        vis/Particles.cpp
        vis/Particles.h
        main.cpp
        Particles.cpp
        Particles.h)

add_executable(vis ${SOURCE_FILES})